--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,19 @@ body {
   background-color:white;
   background-image:url(image_de_fond.png);
   background-size: cover;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.parallax {
+  background-image: url('image_de_fond.png');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  z-index: -1;
 }
 
 /* En-tête */
@@ -126,3 +139,14 @@ a:hover {
   z-index: 100;
 }
 
+.parallax {
+  background-image: url('image_de_fond.png');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  z-index: -1;
+}
