--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,24 +1,10 @@
 /* Styles généraux */
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
   font-family: 'Lombardina Initial Two', cursive;
-  background-color:white;
-  background-image:url(image_de_fond.png);
+  background: white url('/images/image_de_fond.png') no-repeat fixed center;
   background-size: cover;
+  margin: 0;
   transition: opacity 0.5s ease-in-out;
-}
-
-.parallax {
-  background-image: url('image_de_fond.png');
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-  width: 100%;
-  position: relative;
-  z-index: -1;
 }
 
 /* En-tête */
@@ -100,17 +86,18 @@ main {
   margin: 20px;
   padding: 20px;
   border: 1px solid #ccc;
-  background-color: black; /* Ajout du fond noir */
-  color: white; /* Ajout de la police blanche */
+  background-color: green;
+  color: white;
   font-family: 'Lombardina Initial Two', cursive;
 }
-  
+
 h2 {
   margin-top: 0;
 }
 
 p {
-  line-height: 1.5;
+  margin: 0;
+  padding: 10px 0;
 }
 
 img {
@@ -127,23 +114,18 @@ blockquote {
 }
 
 a:hover {
-  color: red; /* couleur du lien au survol */
+  color: red;
 }
 
 /* Style pour le bouton de lecture vocale */
-#read-button {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 20px;
-  z-index: 100;
+button {
+  position: relative; /* modifier la position en relative pour ne pas affecter le positionnement absolu de ses enfants */
+  z-index: 2; /* définir un z-index supérieur à celui de main */
+  margin: 10px; /* ajouter une marge pour plus d'espace */
 }
 
 .parallax {
-  background-image: url('image_de_fond.png');
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url('/images/image_de_fond.png') no-repeat fixed center;
   background-size: cover;
   height: 100vh;
   width: 100%;
